@@ -42,7 +42,7 @@ public:
 	/**
 	 * Creates a new RevoluteJoint connecting body1 and body2.
 	 **/
-	RevoluteJoint(Body *body1, Body *body2, float x, float y, bool collideConnected);
+	RevoluteJoint(Body *body1, Body *body2, float xA, float yA, float xB, float yB, bool collideConnected);
 
 	virtual ~RevoluteJoint();
 
